# day_list

./: .gitignore  Cargo.toml  README  README.md  build.lua  daylist_db.toml  diesel.toml  pkg_deb.lua  query.txt  release.lua
migrations/: 20241029010615_init.sql  20241029135557_date_to_datetime.sql  20250225174732_dates_to_text.sql
migrations/2024-08-08-122423_create_todos/: up.rs  up.sql
migrations/2024-08-08-203232_create_todos/: down.sql  up.sql
scripts/: pkg_deb.lua
src/: db.rs  lib.rs  main.rs  models.rs  schema.rs  state.rs
src/controller/: edit_todo.rs  handle.rs  mod.rs  nav.rs  state.rs
src/model/: db.rs  schema.rs
src/view/: render.rs
