[package]
name = "day_list"
description = "A TUI based todo list app built in rust"
version = "0.1.0"
edition = "2021"
default-run = "day_list"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
console = "0.15.8"
dialoguer = "0.11.0"
serde = { version = "1.0.201", features = ["derive"] }
toml = "0.8.12"
dotenvy = "0.15"
tui = "0.19.0"
crossterm = "0.28.1"
sqlx = { version = "0.8.2", features = ["sqlite", "chrono", "runtime-tokio"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
